[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Weapon2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 225.144

[sub_resource type="CircleShape2D" id=2]
radius = 224.0

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Weapon" type="Sprite" parent="Sprites"]
position = Vector2( 0, 237 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="W1" type="Position2D" parent="Sprites/Weapon"]
position = Vector2( 0, 34 )
scale = Vector2( 0.666667, 0.666667 )

[node name="Weapon2" type="Sprite" parent="Sprites"]
position = Vector2( 248, 9.09495e-13 )
rotation = 4.71239
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="W2" type="Position2D" parent="Sprites/Weapon2"]
position = Vector2( 0, 29.3333 )
rotation = 1.5708
scale = Vector2( 0.666667, 0.666667 )

[node name="Weapon3" type="Sprite" parent="Sprites"]
position = Vector2( -248, 0 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="W3" type="Position2D" parent="Sprites/Weapon3"]
position = Vector2( 0.00012207, 32 )
rotation = -1.5708
scale = Vector2( 0.666667, 0.666667 )

[node name="Weapon4" type="Sprite" parent="Sprites"]
position = Vector2( -1.81899e-12, -248 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="W4" type="Position2D" parent="Sprites/Weapon4"]
position = Vector2( 0, 24.6667 )
rotation = -3.14159
scale = Vector2( 0.666667, 0.666667 )

[node name="Sprite" type="Sprite" parent="Sprites"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WeaponCD" type="Timer" parent="."]
wait_time = 0.3

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[connection signal="timeout" from="WeaponCD" to="." method="_on_WeaponCD_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
